Small UI changes

--- a/api/templates/docs/configGuide.html
+++ b/api/templates/docs/configGuide.html
@@ -240,85 +240,85 @@
     <ol class="ol ol-demoData">
       <li>
         <h4 class="h4-guide">/signup</h4>
-        <iframe class="iframe-code" frameborder="0" scrolling="no" style="width:100%; height:205px;" allow="clipboard-write" src="https://emgithub.com/iframe.html?target=https%3A%2F%2Fgithub.com%2FAbled-Taha%2Fapm-server%2Fblob%2Fmain%2Fapi%2Fstatic%2Fpost_demo_data%2Fsignup.json&style=a11y-dark&type=code&showBorder=on&showLineNumbers=on&showFileMeta=on&showFullPath=on&showCopy=on"></iframe>
+        <iframe frameborder="0" scrolling="no" style="width:100%; height:226px;" allow="clipboard-write" src="https://emgithub.com/iframe.html?target=https%3A%2F%2Fgithub.com%2FAbled-Taha%2Fapm-server%2Fblob%2Fmain%2Fapi%2Fstatic%2Fpost_demo_data%2Fsignup.json&style=a11y-dark&type=code&showBorder=on&showLineNumbers=on&showFileMeta=on&showFullPath=on&showCopy=on"></iframe>
         <br>
       </li>
 
       <li>
         <h4 class="h4-guide">/signin</h4>
-        <iframe class="iframe-code" frameborder="0" scrolling="no" style="width:100%; height:163px;" allow="clipboard-write" src="https://emgithub.com/iframe.html?target=https%3A%2F%2Fgithub.com%2FAbled-Taha%2Fapm-server%2Fblob%2Fmain%2Fapi%2Fstatic%2Fpost_demo_data%2Fsignin.json&style=a11y-dark&type=code&showBorder=on&showLineNumbers=on&showFileMeta=on&showFullPath=on&showCopy=on"></iframe>
+        <iframe frameborder="0" scrolling="no" style="width:100%; height:184px;" allow="clipboard-write" src="https://emgithub.com/iframe.html?target=https%3A%2F%2Fgithub.com%2FAbled-Taha%2Fapm-server%2Fblob%2Fmain%2Fapi%2Fstatic%2Fpost_demo_data%2Fsignin.json&style=a11y-dark&type=code&showBorder=on&showLineNumbers=on&showFileMeta=on&showFullPath=on&showCopy=on"></iframe>
         <br>
       </li>
 
       <li>
         <h4 class="h4-guide">/vault-get</h4>
-        <iframe class="iframe-code" frameborder="0" scrolling="no" style="width:100%; height:163px;" allow="clipboard-write" src="https://emgithub.com/iframe.html?target=https%3A%2F%2Fgithub.com%2FAbled-Taha%2Fapm-server%2Fblob%2Fmain%2Fapi%2Fstatic%2Fpost_demo_data%2Fvault-get.json&style=a11y-dark&type=code&showBorder=on&showLineNumbers=on&showFileMeta=on&showFullPath=on&showCopy=on"></iframe>
+        <iframe frameborder="0" scrolling="no" style="width:100%; height:184px;" allow="clipboard-write" src="https://emgithub.com/iframe.html?target=https%3A%2F%2Fgithub.com%2FAbled-Taha%2Fapm-server%2Fblob%2Fmain%2Fapi%2Fstatic%2Fpost_demo_data%2Fvault-get.json&style=a11y-dark&type=code&showBorder=on&showLineNumbers=on&showFileMeta=on&showFullPath=on&showCopy=on"></iframe>
         <br>
       </li>
 
       <li>
         <h4 class="h4-guide">/vault-new</h4>
-        <iframe class="iframe-code" frameborder="0" scrolling="no" style="width:100%; height:205px;" allow="clipboard-write" src="https://emgithub.com/iframe.html?target=https%3A%2F%2Fgithub.com%2FAbled-Taha%2Fapm-server%2Fblob%2Fmain%2Fapi%2Fstatic%2Fpost_demo_data%2Fvault-new.json&style=a11y-dark&type=code&showBorder=on&showLineNumbers=on&showFileMeta=on&showFullPath=on&showCopy=on"></iframe>
+        <iframe frameborder="0" scrolling="no" style="width:100%; height:289px;" allow="clipboard-write" src="https://emgithub.com/iframe.html?target=https%3A%2F%2Fgithub.com%2FAbled-Taha%2Fapm-server%2Fblob%2Fmain%2Fapi%2Fstatic%2Fpost_demo_data%2Fvault-new.json&style=a11y-dark&type=code&showBorder=on&showLineNumbers=on&showFileMeta=on&showFullPath=on&showCopy=on"></iframe>
         <br>
       </li>
 
       <li>
         <h4 class="h4-guide">/vault-delete</h4>
-        <iframe class="iframe-code" frameborder="0" scrolling="no" style="width:100%; height:184px;" allow="clipboard-write" src="https://emgithub.com/iframe.html?target=https%3A%2F%2Fgithub.com%2FAbled-Taha%2Fapm-server%2Fblob%2Fmain%2Fapi%2Fstatic%2Fpost_demo_data%2Fvault-delete.json&style=a11y-dark&type=code&showBorder=on&showLineNumbers=on&showFileMeta=on&showFullPath=on&showCopy=on"></iframe>
+        <iframe frameborder="0" scrolling="no" style="width:100%; height:205px;" allow="clipboard-write" src="https://emgithub.com/iframe.html?target=https%3A%2F%2Fgithub.com%2FAbled-Taha%2Fapm-server%2Fblob%2Fmain%2Fapi%2Fstatic%2Fpost_demo_data%2Fvault-delete.json&style=a11y-dark&type=code&showBorder=on&showLineNumbers=on&showFileMeta=on&showFullPath=on&showCopy=on"></iframe>
         <br>
       </li>
 
       <li>
         <h4 class="h4-guide">/vault-edit</h4>
-        <iframe class="iframe-code" frameborder="0" scrolling="no" style="width:100%; height:247px;" allow="clipboard-write" src="https://emgithub.com/iframe.html?target=https%3A%2F%2Fgithub.com%2FAbled-Taha%2Fapm-server%2Fblob%2Fmain%2Fapi%2Fstatic%2Fpost_demo_data%2Fvault-edit.json&style=a11y-dark&type=code&showBorder=on&showLineNumbers=on&showFileMeta=on&showFullPath=on&showCopy=on"></iframe>
+        <iframe frameborder="0" scrolling="no" style="width:100%; height:289px;" allow="clipboard-write" src="https://emgithub.com/iframe.html?target=https%3A%2F%2Fgithub.com%2FAbled-Taha%2Fapm-server%2Fblob%2Fmain%2Fapi%2Fstatic%2Fpost_demo_data%2Fvault-edit.json&style=a11y-dark&type=code&showBorder=on&showLineNumbers=on&showFileMeta=on&showFullPath=on&showCopy=on"></iframe>
         <br>
       </li>
 
       <li>
         <h4 class="h4-guide">/session-get</h4>
-        <iframe class="iframe-code" frameborder="0" scrolling="no" style="width:100%; height:163px;" allow="clipboard-write" src="https://emgithub.com/iframe.html?target=https%3A%2F%2Fgithub.com%2FAbled-Taha%2Fapm-server%2Fblob%2Fmain%2Fapi%2Fstatic%2Fpost_demo_data%2Fsession-get.json&style=a11y-dark&type=code&showBorder=on&showLineNumbers=on&showFileMeta=on&showFullPath=on&showCopy=on"></iframe>
+        <iframe frameborder="0" scrolling="no" style="width:100%; height:184px;" allow="clipboard-write" src="https://emgithub.com/iframe.html?target=https%3A%2F%2Fgithub.com%2FAbled-Taha%2Fapm-server%2Fblob%2Fmain%2Fapi%2Fstatic%2Fpost_demo_data%2Fsession-get.json&style=a11y-dark&type=code&showBorder=on&showLineNumbers=on&showFileMeta=on&showFullPath=on&showCopy=on"></iframe>
         <br>
       </li>
 
       <li>
         <h4 class="h4-guide">/session-delete</h4>
-        <iframe class="iframe-code" frameborder="0" scrolling="no" style="width:100%; height:184px;" allow="clipboard-write" src="https://emgithub.com/iframe.html?target=https%3A%2F%2Fgithub.com%2FAbled-Taha%2Fapm-server%2Fblob%2Fmain%2Fapi%2Fstatic%2Fpost_demo_data%2Fsession-delete.json&style=a11y-dark&type=code&showBorder=on&showLineNumbers=on&showFileMeta=on&showFullPath=on&showCopy=on"></iframe>
+        <iframe frameborder="0" scrolling="no" style="width:100%; height:205px;" allow="clipboard-write" src="https://emgithub.com/iframe.html?target=https%3A%2F%2Fgithub.com%2FAbled-Taha%2Fapm-server%2Fblob%2Fmain%2Fapi%2Fstatic%2Fpost_demo_data%2Fsession-delete.json&style=a11y-dark&type=code&showBorder=on&showLineNumbers=on&showFileMeta=on&showFullPath=on&showCopy=on"></iframe>
         <br>
       </li>
 
       <li>
         <h4 class="h4-guide">/session-edit</h4>
-        <iframe class="iframe-code" frameborder="0" scrolling="no" style="width:100%; height:240px;" allow="clipboard-write" src="https://emgithub.com/iframe.html?target=https%3A%2F%2Fgithub.com%2FAbled-Taha%2Fapm-server%2Fblob%2Fmain%2Fapi%2Fstatic%2Fpost_demo_data%2Fsession-edit.json&style=a11y-dark&type=code&showBorder=on&showLineNumbers=on&showFileMeta=on&showFullPath=on&showCopy=on"></iframe>
+        <iframe frameborder="0" scrolling="no" style="width:100%; height:226px;" allow="clipboard-write" src="https://emgithub.com/iframe.html?target=https%3A%2F%2Fgithub.com%2FAbled-Taha%2Fapm-server%2Fblob%2Fmain%2Fapi%2Fstatic%2Fpost_demo_data%2Fsession-edit.json&style=a11y-dark&type=code&showBorder=on&showLineNumbers=on&showFileMeta=on&showFullPath=on&showCopy=on"></iframe>
         <br>
       </li>
 
       <li>
         <h4 class="h4-guide">/pp-new</h4>
-        <iframe class="iframe-code" frameborder="0" scrolling="no" style="width:100%; height:240px;" allow="clipboard-write" src="https://emgithub.com/iframe.html?target=https%3A%2F%2Fgithub.com%2FAbled-Taha%2Fapm-server%2Fblob%2Fmain%2Fapi%2Fstatic%2Fpost_demo_data%2Fpp-new.json&style=a11y-dark&type=code&showBorder=on&showLineNumbers=on&showFileMeta=on&showFullPath=on&showCopy=on"></iframe>
+        <iframe frameborder="0" scrolling="no" style="width:100%; height:226px;" allow="clipboard-write" src="https://emgithub.com/iframe.html?target=https%3A%2F%2Fgithub.com%2FAbled-Taha%2Fapm-server%2Fblob%2Fmain%2Fapi%2Fstatic%2Fpost_demo_data%2Fpp-new.json&style=a11y-dark&type=code&showBorder=on&showLineNumbers=on&showFileMeta=on&showFullPath=on&showCopy=on"></iframe>
         <br>
       </li>
 
       <li>
         <h4 class="h4-guide">/pp-get</h4>
-        <iframe class="iframe-code" frameborder="0" scrolling="no" style="width:100%; height:240px;" allow="clipboard-write" src="https://emgithub.com/iframe.html?target=https%3A%2F%2Fgithub.com%2FAbled-Taha%2Fapm-server%2Fblob%2Fmain%2Fapi%2Fstatic%2Fpost_demo_data%2Fpp-get.json&style=a11y-dark&type=code&showBorder=on&showLineNumbers=on&showFileMeta=on&showFullPath=on&showCopy=on"></iframe>
+        <iframe frameborder="0" scrolling="no" style="width:100%; height:205px;" allow="clipboard-write" src="https://emgithub.com/iframe.html?target=https%3A%2F%2Fgithub.com%2FAbled-Taha%2Fapm-server%2Fblob%2Fmain%2Fapi%2Fstatic%2Fpost_demo_data%2Fpp-get.json&style=a11y-dark&type=code&showBorder=on&showLineNumbers=on&showFileMeta=on&showFullPath=on&showCopy=on"></iframe>
         <br>
       </li>
       
       <li>
         <h4 class="h4-guide">/otp-send</h4>
-        <iframe class="iframe-code" frameborder="0" scrolling="no" style="width:100%; height:240px;" allow="clipboard-write" src="https://emgithub.com/iframe.html?target=https%3A%2F%2Fgithub.com%2FAbled-Taha%2Fapm-server%2Fblob%2Fmain%2Fapi%2Fstatic%2Fpost_demo_data%2Fotp-send.json&style=a11y-dark&type=code&showBorder=on&showLineNumbers=on&showFileMeta=on&showFullPath=on&showCopy=on"></iframe>
+        <iframe frameborder="0" scrolling="no" style="width:100%; height:184px;" allow="clipboard-write" src="https://emgithub.com/iframe.html?target=https%3A%2F%2Fgithub.com%2FAbled-Taha%2Fapm-server%2Fblob%2Fmain%2Fapi%2Fstatic%2Fpost_demo_data%2Fotp-send.json&style=a11y-dark&type=code&showBorder=on&showLineNumbers=on&showFileMeta=on&showFullPath=on&showCopy=on"></iframe>
         <br>
       </li>
       
       <li>
         <h4 class="h4-guide">/otp-verify</h4>
-        <iframe class="iframe-code" frameborder="0" scrolling="no" style="width:100%; height:240px;" allow="clipboard-write" src="https://emgithub.com/iframe.html?target=https%3A%2F%2Fgithub.com%2FAbled-Taha%2Fapm-server%2Fblob%2Fmain%2Fapi%2Fstatic%2Fpost_demo_data%2Fotp-verify.json&style=a11y-dark&type=code&showBorder=on&showLineNumbers=on&showFileMeta=on&showFullPath=on&showCopy=on"></iframe>
+        <iframe frameborder="0" scrolling="no" style="width:100%; height:205px;" allow="clipboard-write" src="https://emgithub.com/iframe.html?target=https%3A%2F%2Fgithub.com%2FAbled-Taha%2Fapm-server%2Fblob%2Fmain%2Fapi%2Fstatic%2Fpost_demo_data%2Fotp-verify.json&style=a11y-dark&type=code&showBorder=on&showLineNumbers=on&showFileMeta=on&showFullPath=on&showCopy=on"></iframe>
         <br>
       </li>
 
       <li>
         <h4 class="h4-guide">/change-password</h4>
-        <iframe class="iframe-code" frameborder="0" scrolling="no" style="width:100%; height:480px;" allow="clipboard-write" src="https://emgithub.com/iframe.html?target=https%3A%2F%2Fgithub.com%2FAbled-Taha%2Fapm-server%2Fblob%2Fmain%2Fapi%2Fstatic%2Fpost_demo_data%2Fchange-password.json&style=a11y-dark&type=code&showBorder=on&showLineNumbers=on&showFileMeta=on&showFullPath=on&showCopy=on"></iframe>
+        <iframe frameborder="0" scrolling="no" style="width:100%; height:436px;" allow="clipboard-write" src="https://emgithub.com/iframe.html?target=https%3A%2F%2Fgithub.com%2FAbled-Taha%2Fapm-server%2Fblob%2Fmain%2Fapi%2Fstatic%2Fpost_demo_data%2Fchange-password.json&style=a11y-dark&type=code&showBorder=on&showLineNumbers=on&showFileMeta=on&showFullPath=on&showCopy=on"></iframe>
         <br>
       </li>
     </ol>
